service-mesh/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: my-destinationrule
spec:
  host: myapp # Kubernetes service name
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN # Use round-robin load balancing
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
