service-mesh/istio/faulinjection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: myapp-virtualservice
spec:
  hosts:
  - "myapp.example.com"
  gateways:
  - myapp-gateway
  http:
  - fault:
      delay:
        percentage:
          value: 50 # Delay 50% of the requests
        fixedDelay: 5s # 5 seconds delay for affected requests
      abort:
        percentage:
          value: 10 # Abort 10% of the requests
        httpStatus: 400 # Return HTTP 400 for the aborted requests
    route:
    - destination:
        host: myapp
        subset: v1
      weight: 90
    - destination:
        host: myapp
        subset: v2
      weight: 10
    timeout: 3s
